--- a/01-css/index.css
+++ b/01-css/index.css
@@ -948,7 +948,6 @@ h2:hover {
 
 .project-3 img {
     vertical-align: middle;
-
 }
 
 .image-hover3{
@@ -982,8 +981,7 @@ h2:hover {
 
 .project-4 {
     position: relative;
-    z-index: 1;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .project-4:hover {
@@ -991,23 +989,34 @@ h2:hover {
 }
 
 .project-4 > p {
-    font-size: 30px;
+    font-size: 50px;
+}
+
+.project-4 img {
+    vertical-align: middle;
+}
+
+.image-hover4{
+    position: absolute;
+    top: -30px;
+    left: 30px;
 }
 
 .project-4 span {
-    color: rgb(9, 44, 81);
-    position: absolute;
-    left: 220px;
-    top: 70px;
-}
-
-.project-4 span:hover {
-    color: rgb(250, 250, 250);
+    color: white;
     text-shadow:
         -1px -1px 0 rgb(9, 44, 81),
         1px -1px 0 rgb(9, 44, 81),
         -1px 1px 0 rgb(9, 44, 81),
         1px 1px 0 rgb(9, 44, 81); 
+    position:absolute;
+    left: -85px;
+    top: 75px;
+}
+
+.project-4 span:hover {
+    color: rgb(9, 44, 81);
+    text-shadow: none; 
 }
 
 /******* PROJET 5 ******/
