--- a/01-css/index.css
+++ b/01-css/index.css
@@ -1023,7 +1023,6 @@ h2:hover {
 
 .project-5 {
     position: relative;
-    z-index: 1;
 }
 
 .project-5:hover {
@@ -1034,20 +1033,31 @@ h2:hover {
     font-size: 30px;
 }
 
-.project-5 span {
-    color: rgb(9, 44, 81);
-    position: absolute;
-    left: 220px;
-    top: 65px;
+.project-5 img {
+    vertical-align: middle;
 }
 
-.project-5 span:hover {
-    color: rgb(250, 250, 250);
+.image-hover5{
+    position: absolute;
+    top: 30px;
+    left: 30px;
+}
+
+.project-5 span {
+    color: white;
     text-shadow:
         -1px -1px 0 rgb(9, 44, 81),
         1px -1px 0 rgb(9, 44, 81),
         -1px 1px 0 rgb(9, 44, 81),
         1px 1px 0 rgb(9, 44, 81); 
+    position:absolute;
+    left: -85px;
+    top: 75px;
+}
+
+.project-5 span:hover {
+    color: rgb(9, 44, 81);
+    text-shadow: none; 
 }
 
 /******* PROJET 6 ******/
