--- a/01-css/index.css
+++ b/01-css/index.css
@@ -92,7 +92,8 @@ p {
 }
 
 header {
-    min-height: 710px;
+    height: 100vh;
+    width: auto;
 }
 
 .header {
@@ -870,28 +871,39 @@ h2:hover {
     vertical-align: middle;
 }
 
+.img-responsive {
+    max-width: 100%;
+    height: auto;
+}
+
 .image-hover1{
     position: absolute;
     top: 30px;
     left: -30px;
 }
 
-.project-1 span {
-    color: white;
-    text-shadow:
-        -1px -1px 0 rgb(9, 44, 81),
-        1px -1px 0 rgb(9, 44, 81),
-        -1px 1px 0 rgb(9, 44, 81),
-        1px 1px 0 rgb(9, 44, 81); 
+.span1 {
+    color: rgb(9, 44, 81);
+    text-shadow: none; 
     position:absolute;
     left: 163px;
     top: 75px;
 }
 
-.project-1 span:hover {
-    color: rgb(9, 44, 81);
-    text-shadow: none; 
+
+.span1-hover {
+    position:absolute;
+    left: 163px;
+    top: 75px;
+    color: white;
+    text-shadow:
+        -1px -1px 0 rgb(9, 44, 81),
+        1px -1px 0 rgb(9, 44, 81),
+        -1px 1px 0 rgb(9, 44, 81),
+        1px 1px 0 rgb(9, 44, 81);
 }
+
+
 
 /****** PROJET 2 ******/
 
@@ -918,21 +930,21 @@ h2:hover {
     left:-30px;
 }
 
-.project-2 span {
+.span2 {
+    color: rgb(9, 44, 81);
+    text-shadow: none; 
+    position:absolute;
+    left: -85px;
+    top: 75px;
+}
+
+.span2-hover{
     color: white;
     text-shadow:
         -1px -1px 0 rgb(9, 44, 81),
         1px -1px 0 rgb(9, 44, 81),
         -1px 1px 0 rgb(9, 44, 81),
         1px 1px 0 rgb(9, 44, 81); 
-    position:absolute;
-    left: -85px;
-    top: 75px;
-}
-
-.project-2 span:hover {
-    color: rgb(9, 44, 81);
-    text-shadow: none; 
 }
 
 /****** PROJET 3 ******/
@@ -960,21 +972,21 @@ h2:hover {
     font-size: 50px;
 }
 
-.project-3 span {
+.span3 {
+    color: rgb(9, 44, 81);
+    text-shadow: none; 
+    position:absolute;
+    left: -85px;
+    top: 75px;
+}
+
+.span3-hover {
     color: white;
     text-shadow:
         -1px -1px 0 rgb(9, 44, 81),
         1px -1px 0 rgb(9, 44, 81),
         -1px 1px 0 rgb(9, 44, 81),
         1px 1px 0 rgb(9, 44, 81); 
-    position:absolute;
-    left: -85px;
-    top: 75px;
-}
-
-.project-3 span:hover {
-    color: rgb(9, 44, 81);
-    text-shadow: none; 
 }
 
 /******* PROJET 4 ******/
@@ -1002,21 +1014,21 @@ h2:hover {
     left: 30px;
 }
 
-.project-4 span {
-    color: white;
-    text-shadow:
-        -1px -1px 0 rgb(9, 44, 81),
-        1px -1px 0 rgb(9, 44, 81),
-        -1px 1px 0 rgb(9, 44, 81),
-        1px 1px 0 rgb(9, 44, 81); 
+.span4 {
+    color: rgb(9, 44, 81);
+    text-shadow: none;  
     position:absolute;
     left: -85px;
     top: 75px;
 }
 
-.project-4 span:hover {
-    color: rgb(9, 44, 81);
-    text-shadow: none; 
+.span4-hover {
+       color: white;
+    text-shadow:
+        -1px -1px 0 rgb(9, 44, 81),
+        1px -1px 0 rgb(9, 44, 81),
+        -1px 1px 0 rgb(9, 44, 81),
+        1px 1px 0 rgb(9, 44, 81); 
 }
 
 /******* PROJET 5 ******/
@@ -1030,7 +1042,7 @@ h2:hover {
 }
 
 .project-5 > p {
-    font-size: 30px;
+    font-size: 50px;
 }
 
 .project-5 img {
@@ -1073,23 +1085,34 @@ h2:hover {
 }
 
 .project-6 > p {
-    font-size: 30px;
+    font-size: 50px;
+}
+
+.project-6 img {
+    vertical-align: middle;
+}
+
+.image-hover6{
+    position: absolute;
+    top: 30px;
+    left: -30px;
 }
 
 .project-6 span {
-    color: rgb(9, 44, 81);
-    position: absolute;
-    left: 215px;
-    top: 70px;
-}
-
-.project-6 span:hover {
-    color: rgb(250, 250, 250);
+    color: white;
     text-shadow:
         -1px -1px 0 rgb(9, 44, 81),
         1px -1px 0 rgb(9, 44, 81),
         -1px 1px 0 rgb(9, 44, 81),
         1px 1px 0 rgb(9, 44, 81); 
+    position:absolute;
+    left: -85px;
+    top: 75px;
+}
+
+.project-6 span:hover {
+    color: rgb(9, 44, 81);
+    text-shadow: none; 
 }
 
 /******* PROJET 7 ******/
