--- a/01-css/index.css
+++ b/01-css/index.css
@@ -852,6 +852,12 @@ h2:hover {
 .hidden {
     display: none;
 }
+
+.img-responsive {
+    max-width: 100%;
+    height: auto;
+}
+
 /******* PROJET 1 ******/
 
 .project-1 {
@@ -871,11 +877,6 @@ h2:hover {
     vertical-align: middle;
 }
 
-.img-responsive {
-    max-width: 100%;
-    height: auto;
-}
-
 .image-hover1{
     position: absolute;
     top: 30px;
@@ -890,7 +891,6 @@ h2:hover {
     top: 75px;
 }
 
-
 .span1-hover {
     position:absolute;
     left: 163px;
@@ -902,7 +902,6 @@ h2:hover {
         -1px 1px 0 rgb(9, 44, 81),
         1px 1px 0 rgb(9, 44, 81);
 }
-
 
 
 /****** PROJET 2 ******/
@@ -1023,7 +1022,7 @@ h2:hover {
 }
 
 .span4-hover {
-       color: white;
+    color: white;
     text-shadow:
         -1px -1px 0 rgb(9, 44, 81),
         1px -1px 0 rgb(9, 44, 81),
@@ -1055,21 +1054,21 @@ h2:hover {
     left: 30px;
 }
 
-.project-5 span {
+.span5{
+    color: rgb(9, 44, 81);
+    text-shadow: none; 
+    position:absolute;
+    left: -85px;
+    top: 75px;
+}
+
+.span5-hover {
     color: white;
     text-shadow:
         -1px -1px 0 rgb(9, 44, 81),
         1px -1px 0 rgb(9, 44, 81),
         -1px 1px 0 rgb(9, 44, 81),
         1px 1px 0 rgb(9, 44, 81); 
-    position:absolute;
-    left: -85px;
-    top: 75px;
-}
-
-.project-5 span:hover {
-    color: rgb(9, 44, 81);
-    text-shadow: none; 
 }
 
 /******* PROJET 6 ******/
@@ -1098,21 +1097,21 @@ h2:hover {
     left: -30px;
 }
 
-.project-6 span {
+.span6 {
+    color: rgb(9, 44, 81);
+    text-shadow: none;
+    position:absolute;
+    left: -85px;
+    top: 75px;
+}
+
+.span6-hover {
     color: white;
     text-shadow:
         -1px -1px 0 rgb(9, 44, 81),
         1px -1px 0 rgb(9, 44, 81),
         -1px 1px 0 rgb(9, 44, 81),
         1px 1px 0 rgb(9, 44, 81); 
-    position:absolute;
-    left: -85px;
-    top: 75px;
-}
-
-.project-6 span:hover {
-    color: rgb(9, 44, 81);
-    text-shadow: none; 
 }
 
 /******* PROJET 7 ******/
@@ -1127,18 +1126,29 @@ h2:hover {
     cursor: crosshair;
 }
 
-.project-7 > p {
-    font-size: 30px;
+
+.project-7 img {
+    vertical-align: middle;
 }
 
-.project-7 span {
+.image-hover7{
+    position: absolute;
+    top: -30px;
+    left:-30px;
+}
+
+.project-7 > p {
+    font-size: 50px;
+}
+
+.span7 {
     color: rgb(9, 44, 81);
     position: absolute;
-    left: -74px;
+    left: -184px;
     top: 84px
 }
 
-.project-7 span:hover {
+.span7-hover {
     color: rgb(250, 250, 250);
     text-shadow:
         -1px -1px 0 rgb(9, 44, 81),
