réglage problème header

--- a/01-css/index.css
+++ b/01-css/index.css
@@ -9,6 +9,23 @@
     font-weight: 700;
 }
 
+.container-fluid {
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    margin: 0;
+    padding: 0;
+}
+
+/*
+.col-xs-12 .col-xs-11 .col-xs-10 .col-xs-9 .col-xs-8 .col-xs-7 .col-xs-6 .col-xs-5 .col-xs-4 .col-xs-3 .col-xs-2 .col-xs-1 .col-sm-12 .col-sm-10 .col-sm-9 .col-sm-8 .col-sm-7 .col-sm-6 .col-sm-5 .col-sm-4 .col-sm-3 .col-sm-2 .col-sm-1 .col-md-12 .col-md-10 .col-md-9 .col-md-8 .col-md-7 .col-md-6 .col-md-5 .col-md-4 .col-md-3 .col-md-2 .col-md-1 .col-lg-12 .col-lg-10 .col-lg-9 .col-lg-8 .col-lg-7 .col-lg-6 .col-lg-5 .col-lg-4 .col-lg-3 .col-lg-2 .col-lg-1 {
+    margin: 0;
+    padding: 0;
+}
+*/
+
 /* FAIRE DES VARIABLES POUR LES IMAGES: ; QUI CHANGENT AU CHARGEMENT */
 
 .backnav {
@@ -43,25 +60,25 @@ a:hover {
 
 /*
 .nav-list{
-    display: none;
+display: none;
 }
 */
 
 .nav-list {
-cursor: crosshair;
-list-style: none;
-color: rgb(16, 52, 166);
-position: absolute;
-line-height: 70px;
-left: 84.7%;
-top: 150px;
--ms-transform: rotate(90deg);
--webkit-transform: rotate(90deg);
-transform: rotate(90deg);   
+    cursor: crosshair;
+    list-style: none;
+    color: rgb(16, 52, 166);
+    position: absolute;
+    line-height: 70px;
+    left: 84.7%;
+    top: 150px;
+    -ms-transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);   
 }
 
 .navcss {
-display: inline;
+    display: inline;
 }
 
 .projets1{
@@ -1146,10 +1163,12 @@ h2:hover {
 
 /******* PROJET 7 ******/
 
+
 .project-7 {
     position: relative;
     z-index: 1;
     margin-top: 30px;
+    padding-bottom: 20px;
 }
 
 .project-7:hover {
@@ -1185,4 +1204,73 @@ h2:hover {
         1px -1px 0 rgb(9, 44, 81),
         -1px 1px 0 rgb(9, 44, 81),
         1px 1px 0 rgb(9, 44, 81); 
+}
+
+.titrepropos {
+    font-size: 40px;
+    color: rgb(9, 45, 87);
+    -ms-transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+    position: absolute;
+    margin-top: 200px;
+    cursor: crosshair;
+}
+
+.description {
+    background-color: white;
+}
+
+#perspective {
+    font-size: 18px;
+    color: rgb(9, 44, 81);
+    margin-top: 250px;
+    padding-bottom: 200px;
+    width: 550px;
+    height: auto;    
+}
+
+
+/* DIV CACHÉE DU PREMIER PROJET */
+
+.lightbox {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    z-index: 12;
+    height: 100vh;
+    width: 100vw;
+    background-color: #fff8f8 ;
+}
+
+.patterntitle {
+    font-size: 40px;
+    color: rgb(9, 45, 87);
+    -ms-transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+    position: absolute;
+    margin-top: 180px;
+    cursor: crosshair;
+}
+
+.patterntitle:hover {
+    color: rgb(250, 250, 250);
+    text-shadow:
+        -1px -1px 0 rgb(8, 45, 81),
+        1px -1px 0 rgb(8, 45, 81),
+        -1px 1px 0 rgb(8, 45, 81),
+        1px 1px 0 rgb(8, 45, 81);   
+}
+
+.patterntxt {
+    width: 550px;
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    color: rgb(9, 44, 81);
+    margin-top: 250px;
+    padding-bottom: 200px;
 }
