--- a/01-css/style.css
+++ b/01-css/style.css
@@ -11,10 +11,11 @@
 
 
 body {
-    --waleblue: rgb(9, 44, 81);
+    --waleblue: #092c51;
     --orangemecanique: #ff0000;
-    --petrole :rgb(0, 75, 106);
+    --petrole: #004b6b;
     --white: #ffffff;
+    --vanilla: #f0f2ec;
     margin: 0;
     padding: 0;
     font-family: 'SuperspitzeGrotesk';
@@ -124,12 +125,9 @@ p {
     padding: 0;
 }
 
-header {
+.header {
     height: 100vh;
     width: auto;
-}
-
-.header {
     width: 975px;
     height: 599px;
     position: relative;
@@ -188,7 +186,7 @@ header {
     position: absolute;
     z-index: 2;
     bottom: 18px;
-    left: 460px;
+    left: 420px;
 }
 
 .rr {
@@ -867,7 +865,10 @@ h2 {
 }
 
 .projets {
+    background-image: url(../03-images/bg-nomirar-2.svg);
+    background-repeat: repeat;
     margin-top: 120px;
+    padding-top: 100px;
     padding-bottom: 120px;
 }
 
@@ -929,7 +930,7 @@ h2 {
 }
 
 .span1 {
-    color: var(--petrole);
+    color: var(--white);
     position:absolute;
     left: 143px;
     top: 135px;  
@@ -937,6 +938,13 @@ h2 {
     width: 100%;
     font-weight: 600;
     letter-spacing: 0.125em;
+
+    text-shadow:
+        -1px -1px 0 var(--waleblue),
+        1px -1px 0 var(--waleblue),
+        -1px 1px 0 var(--waleblue),
+        1px 1px 0 var(--waleblue);
+
 }
 
 
@@ -1152,31 +1160,60 @@ h2 {
 
 /********************** À PROPOS ******************/
 
-.titrepropos {
-    font-size: 40px;
-    color: rgb(9, 45, 87);
-    -ms-transform: rotate(-90deg);
-    -webkit-transform: rotate(-90deg);
-    transform: rotate(-90deg);
-    position: absolute;
-    margin-top: 200px;
-    cursor: crosshair;
+.apropos {
+    margin-top: 100px;
 }
 
 .description {
-    background-color: var(--white);
+    font-size: 20px;
+    color: var(--waleblue);
+    margin-top: 100px;
+    padding-bottom: 20px;
+    width: 550px;
+    height: auto;    
 }
 
-#perspective {
-    font-size: 18px;
+.description-2 {
+    font-size: 20px;
     color: var(--waleblue);
-    margin-top: 120px;
-    padding-bottom: 200px;
     width: 550px;
     height: auto;    
 }
 
 
+/**********************CONTACT *****************/
+
+.moncontact {
+    margin-top: 100px;
+    padding-top: 100px;
+    padding-bottom: 150px;
+    font-size: 22px;
+    color: var(--waleblue);
+}
+
+.mail {
+    margin-top: 100px;
+    padding-bottom: 30px;
+}
+
+.tel {
+    padding-bottom: 30px;
+}
+
+/********************** FOOTER ***************************/
+
+footer {
+    background-image: url(../03-images/bg-nomirar.svg);
+    background-repeat: repeat;
+    margin-top: 100px;
+    padding-top: 20px;
+    font-size: 10px;
+    color: var(--waleblue);
+}
+
+.mentions {
+    padding-bottom: 20px;
+}
 /************* DIV CACHÉE DU PREMIER PROJET *************/
 
 .lightbox {
@@ -1261,8 +1298,4 @@ h2 {
     z-index: 2;
     margin-top: 200px; 
     left: 115px;
-}
-
-.ll {
-    height: 1000px;
 }
